--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div class ="container">
+    <div class ="cont-nav">
       <nav class="nav">
         <div class="nav-left">
           <a href="/#/" class="nav-item">List</a>
@@ -17,9 +17,7 @@
         
       </nav>
     </div>
-    <div class="container" ui-view>
-      
-    </div>
+    <div class="container" ui-view></div>
 
     <script src="js/bundle.js"></script>
   </body>
